fix dark mode for hydration

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,7 +2,7 @@
 
 @plugin './hero.ts';
 @source '../../node_modules/@heroui/theme/dist/**/*.{js,ts,jsx,tsx}';
-@custom-variant dark (&:where([data-color-scheme=dark], [data-color-scheme=dark] *));
+@custom-variant dark (&:where(.dark, .dark *));
 
 @theme {
     --color-theme-white: #ffffff;
@@ -17,7 +17,7 @@
     --spacing-main-height-no-padding: calc(100dvh - var(--spacing-footer-height) - var(--spacing-main-padding) * 2);
 }
 
-:root:where([data-color-scheme="dark"], [data-color-scheme="dark"] *) {
+:root:where(.dark, .dark *) {
     --color-front: var(--color-theme-white);
     --color-back: var(--color-theme-black);
 }
@@ -56,11 +56,11 @@
         -webkit-text-fill-color: transparent;
         transition: background-position 150ms cubic-bezier(0.4, 0, 0.2, 1);
         background-image: linear-gradient(
-                to right,
-                var(--inline-link-c1) 10%,
-                var(--inline-link-c2) 40%,
-                var(--inline-link-c2) 50%,
-                var(--inline-link-bg) 50%
+            to right,
+            var(--inline-link-c1) 10%,
+            var(--inline-link-c2) 40%,
+            var(--inline-link-c2) 50%,
+            var(--inline-link-bg) 50%
         );
     }
 
